[package]
name = "zk_proof"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"
rand = "0.8.5"
sha2 = "0.10.8"
k256 = { version = "0.13.2", features = ["serde", "ecdsa"] }
